[package]
name = "entropy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bip32 = "0.4.0"
bip39 = "1.0.1"
clap = { version = "3.2.22", features = ["derive"] }
colored = "2.0.0"
cosmrs = { version = "0.9.0", features = ["cosmwasm"] }
reqwest = {version="0.11.12", features=["blocking", "json"]}
serde = {version="1.0.145", features = ["derive"]}
serde_json = "1.0.85"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
