[package]
name = "entropycli"
version = "1.0.5"
edition = "2021"

authors = ["Amit Prasad <mail@amitprasad.dev>"]
description = "Entropy CLI for developing using the Entropic Labs Entropy Beacon"
license = "Apache-2.0"
repository = "https://github.com/EntropicLabs/entropycli"
homepage = "https://entropiclabs.io/beacon"
readme = "README.md"
keywords = ["entropy", "beacon", "cosmos", "cosmwasm", "entropic"]
categories = ["command-line-utilities"]
documentation = "https://entropiclabs.io/beacon/docs"

[[bin]]
name = "entropy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bip32 = "0.4.0"
bip39 = "1.0.1"
clap = { version = "4.0.22", features = ["derive"] }
cosmrs = { version = "0.9.0", features = ["cosmwasm"] }
dialoguer = "0.10.2"
ecvrf-rs = "1.0.0"
indicatif = "0.17.1"
reqwest = {version="0.11.12", features=["blocking", "json"]}
serde = {version="1.0.145", features = ["derive"]}
serde_json = "1.0.85"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
entropy_beacon_cosmos = { version = "2.0.4", features = ["ecvrf"] }
cosmwasm-std = "1.1.5"
rand = "0.8.5"
hex = "0.4.3"
